Added code-coverage to pom, and fixed some findbugs issues